--- a/index2.html
+++ b/index2.html
@@ -1,2 +1,2 @@
 <center><textarea style="width: 70%; height: 50px; font-size: 15px; font-family: arial; text-align: center;">
-<a href="https://www.freelancers-web.ga"><img src="https://docs.google.com/uc?export=download&id=1ig5OGHjOqoKpFhVGcCoF_3TtnzxAH5cS"></a></textarea></center>
+<a href="https://www.freelancers-web.ga"><img src="https://aliraffay5479.github.io/slidder/banner.png" /></a></textarea></center>
